<resources>
    <string name="app_name">Daily Tracker</string>
    <string name="sample_completions">2</string>
    <string name="sample_goal">4</string>
    <string name="habit_log_text">Log it</string>
    <string name="sample_habit">Drink a glass of water</string>
    <string name="up_completions">+</string>
    <string name="down_completions">-</string>
    <string name="completions_divider"> "/" </string>
    <string name="habit_null_description">define new habit</string>
    <string name="add_habit_title">New Habit</string>
    <string name="habit_description_label">Habit</string>
    <string name="habit_goal_label">Goal</string>
    <string name="habit_goal_null">Set a daily goal</string>
    <string name="save_label">Save</string>
</resources>
