<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHabitActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/add_habit_title"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/habit_description_label"
                android:layout_marginEnd="20dp"/>

            <EditText
                android:id="@+id/new_habit_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/habit_null_description"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/habit_goal_label"
                android:layout_marginEnd="20dp"/>

            <EditText
                android:id="@+id/new_habit_goal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/habit_goal_null"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/new_habit_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_label"
            android:layout_margin="20dp"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>