<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    tools:context=".ui.main.HabitFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/habit_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/sample_habit" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/habit_completions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sample_completions"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginHorizontal="5dp"
                    tools:text="@string/completions_divider"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/habit_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sample_goal"
                    android:textSize="24sp"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/habit_down_completions"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="@color/colorPrimary"
                android:text="@string/down_completions"
                android:textSize="32sp"
                android:gravity="bottom|center"
                android:paddingBottom="6dp"/>

            <Button
                android:id="@+id/habit_up_completions"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimary"
                android:text="@string/up_completions"
                android:textSize="24sp"
                android:gravity="bottom|center"
                android:paddingBottom="10dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/tweet_date"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentRight="true"-->
    <!--        android:text="Message"-->
    <!--        tools:text="date"-->
    <!--        android:layout_margin="10dp"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>